<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="#fff" 
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"> 
    
    <ImageView 
        android:src="@drawable/bkgd"
        android:scaleType="centerInside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <include layout="@layout/setlayout"
        android:id="@+id/layou0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_below="@id/layou0"
        android:id="@+id/layou1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<RadioGroup
	        android:id="@+id/notifishow"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/auto"/>
	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"	            
	            android:text="@string/no" />
	        <RadioButton
	            android:id="@+id/radio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/per_data" />
	    </RadioGroup>

		<LinearLayout
		    android:paddingLeft="10sp"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
	        <Button
		        android:id="@+id/setBtn"
		        android:text="@string/Setting"
		        android:layout_gravity="right"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>

		</LinearLayout>

	</LinearLayout>

    <LinearLayout
        android:id="@+id/layou2"
        android:layout_below="@id/layou1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/unit" />
        <TextView
            android:id="@+id/notif_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="500KB" />
    </LinearLayout>
    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_below="@id/layou2"
        android:max="30"
        android:paddingLeft="30sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />	
</RelativeLayout>